test_pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: mypod
spec:
  containers:
  - name: mypod
    image: mcr.microsoft.com/oss/nginx/nginx:1.15.5-alpine
    resources:
      requests:
        cpu: 100m
        memory: 128Mi
      limits:
        cpu: 250m
        memory: 256Mi
    volumeMounts:
    - mountPath: "/mnt/dags"
      name: dags
	- mountPath: "/mnt/logs"
      name: logs
  volumes:
	- name: dags
      persistentVolumeClaim:
        claimName: optusairflow-dags
    - name: logs
        persistentVolumeClaim:
          claimName: optusairflow-logs
